--- a/index.html
+++ b/index.html
@@ -9,7 +9,44 @@
 </head>
 
 <body>
-    
+    <div class="body">
+        <img class="backgroundeImg" src="./src/img/carnaby-82KWr7KHwDg-unsplash 1.png" alt="">
+        <div class="backgrounde"></div>
+        <div class="btnContainer">
+            <button class="button Gr669 blueBtn activeBtn">
+                <div class="structureName">
+                    Дом
+                </div>
+            </button>
+            <button class="button Gr684 blueBtn">
+                <div class="structureName"></div>
+            </button>
+            <button class="button Gr679 greenBtn">
+                <div class="structureName"></div>
+            </button>
+            <button class="button Gr683 blueBtn">
+                <div class="structureName"></div>
+            </button>
+            <button class="button Gr678 greenBtn">
+                <div class="structureName"></div>
+            </button>
+            <button class="button Gr682 blueBtn">
+                <div class="structureName"></div>
+            </button>
+            <button class="button Gr681 greenBtn">
+                <div class="structureName"></div>
+            </button>
+            <button class="button Gr685 blueBtn">
+                <div class="structureName"></div>
+            </button>
+            <button class="button Gr670 blueBtn">
+                <div class="structureName"></div>
+            </button>
+            <button class="button Gr680 greenBtn">
+                <div class="structureName"></div>
+            </button>
+        </div>
+    </div>
     <script src="./src/js/index.js"></script>
 </body>
 
