finil version in main branch

--- a/index.html
+++ b/index.html
@@ -10,40 +10,39 @@
 
 <body>
     <div class="body">
-        <img class="backgroundeImg" src="./src/img/carnaby-82KWr7KHwDg-unsplash 1.png" alt="">
         <div class="backgrounde"></div>
         <div class="btnContainer">
-            <button class="button Gr669 blueBtn activeBtn">
+            <button class="button Gr669 blueBtn">
                 <div class="structureName">
                     Дом
                 </div>
             </button>
             <button class="button Gr684 blueBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
             <button class="button Gr679 greenBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
             <button class="button Gr683 blueBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
             <button class="button Gr678 greenBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
             <button class="button Gr682 blueBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
             <button class="button Gr681 greenBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
             <button class="button Gr685 blueBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
             <button class="button Gr670 blueBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
             <button class="button Gr680 greenBtn">
-                <div class="structureName"></div>
+                <div class="structureName">home</div>
             </button>
         </div>
     </div>
