aded alternative algoritme and build naming

--- a/index.html
+++ b/index.html
@@ -14,35 +14,37 @@
         <div class="btnContainer">
             <button class="button Gr669 blueBtn">
                 <div class="structureName">
-                    Дом
+                    Спорзал
                 </div>
             </button>
             <button class="button Gr684 blueBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">
+                    Жилой комплекс
+                </div>
             </button>
             <button class="button Gr679 greenBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">Музей</div>
             </button>
             <button class="button Gr683 blueBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">Буффет</div>
             </button>
             <button class="button Gr678 greenBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">Выстовка</div>
             </button>
             <button class="button Gr682 blueBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">Парковка</div>
             </button>
             <button class="button Gr681 greenBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">Травматология</div>
             </button>
             <button class="button Gr685 blueBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">Больница</div>
             </button>
             <button class="button Gr670 blueBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">Берег</div>
             </button>
             <button class="button Gr680 greenBtn">
-                <div class="structureName">home</div>
+                <div class="structureName">Отель</div>
             </button>
         </div>
     </div>
